k8s/guacamole/resources/guacd.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd-deployment
  labels: &labels
    app.kubernetes.io/component: guacd
spec:
  replicas: 1
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: guacamole
          image: guacamole/guacd@sha256:f1c5abbebc358273330fb370e1bbab4dcf9a25a60e958150a1c1e806f1cb615e
          resources:
            requests:
              memory: 100M
            limits:
              memory: 500M
          ports:
            - name: guacamole
              containerPort: 4822

---
apiVersion: v1
kind: Service
metadata:
  name: guacd-service
spec:
  selector:
    app.kubernetes.io/component: guacd
  ports:
    - name: guacamole
      port: 4822
      targetPort: guacamole
