k8s/guacamole/resources/guacamole.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: guacamole
          image: guacamole/guacamole@sha256:3cf72e4cc6b9845b466d4d878cd0db93ab7566cdc84dc0ffe94145563eb9d43f
          resources:
            requests:
              memory: 300M
            limits:
              memory: 500M
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Other
    gethomepage.dev/icon: guacamole
    gethomepage.dev/app: guacamole
    gethomepage.dev/name: Guacamole
    gethomepage.dev/href: https://guacamole.durbin.casa/guacamole
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: http://authelia-service.default.svc.cluster.local/api/authz/auth-request
    nginx.ingress.kubernetes.io/auth-signin: https://auth.durbin.casa?rm=$request_method
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
spec:
  ingressClassName: internal
  tls:
    - hosts: [&host guacamole.durbin.casa]
      secretName: durbin-casa-wildcard-cert
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web-service
                port:
                  name: http
